refactor(toolService): refactor methods and unity tests