@@ -8,8 +8,6 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
 import org.springframework.boot.test.autoconfigure.orm.jpa.TestEntityManager;
-import java.util.List;
-import java.util.Optional;
 import java.util.UUID;
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -32,12 +30,14 @@ class InventoryRepositoryTest {
                 .name("Keyboard")
                 .active(true)
                 .build();
-        entityManager.persist(tool1);
+
 
         tool2 = ToolEntity.builder()
                 .name("Mouse")
                 .active(false)
                 .build();
+
+        entityManager.persist(tool1);
         entityManager.persist(tool2);
 
         inventoryId = UUID.randomUUID();
@@ -46,15 +46,17 @@ class InventoryRepositoryTest {
     @Test
     @DisplayName("Should return true when inventory exists for a specific tool")
     void shouldReturnTrueWhenExistsByTool() {
-        InventoryEntity inventory = InventoryEntity.builder()
+        var inventory = InventoryEntity.builder()
                 .inventoryId(inventoryId)
                 .tool(tool1)
                 .quantityInitial(10)
                 .quantityCurrent(10)
                 .build();
+
         entityManager.persist(inventory);
 
-        Boolean exists = repository.existsByTool(tool1);
+        var exists = repository
+                .existsByTool(tool1);
 
         assertTrue(exists);
     }
@@ -62,17 +64,17 @@ class InventoryRepositoryTest {
     @Test
     @DisplayName("Should return true when another inventory exists for the same tool excluding current ID")
     void shouldReturnTrueWhenExistsByToolAndIdNot() {
-        // To test this without unique constraint violation,
-        // we first persist one, then try to check existence while ignoring its own ID.
-        InventoryEntity inventory = InventoryEntity.builder()
+        var inventory = InventoryEntity.builder()
                 .inventoryId(inventoryId)
                 .tool(tool1)
                 .quantityInitial(10)
                 .quantityCurrent(10)
                 .build();
 
-        InventoryEntity saved = entityManager.persist(inventory);
-        Boolean existsItself = repository.existsByToolAndIdNot(tool1, saved.getId());
+        var saved = entityManager.persist(inventory);
+
+        var existsItself = repository
+                .existsByToolAndIdNot(tool1, saved.getId());
 
         assertFalse(existsItself);
     }
@@ -80,41 +82,49 @@ class InventoryRepositoryTest {
     @Test
     @DisplayName("Should return only inventories where associated tool is active")
     void shouldFindAllByToolActiveTrue() {
-        InventoryEntity invActive = InventoryEntity.builder()
+        var invActive = InventoryEntity.builder()
                 .inventoryId(inventoryId)
-                .tool(tool1) // active
+                .tool(tool1)
                 .quantityInitial(10)
+                .quantityCurrent(50)
                 .build();
 
-        InventoryEntity invInactive = InventoryEntity.builder()
+        var invInactive = InventoryEntity.builder()
                 .inventoryId(inventoryId)
-                .tool(tool2) // inactive
+                .tool(tool2)
                 .quantityInitial(5)
+                .quantityCurrent(50)
                 .build();
 
         entityManager.persist(invActive);
         entityManager.persist(invInactive);
 
-        List<InventoryEntity> results = repository.findAllByToolActiveTrue();
+        var results = repository
+                .findAllByToolActiveTrue();
 
         assertAll(
                 () -> assertEquals(1, results.size()),
-                () -> assertEquals(inventoryId, results.get(0).getInventoryId())
+                () -> assertEquals(inventoryId, results.getFirst().getInventoryId())
         );
     }
 
     @Test
     @DisplayName("Should find inventory by its custom inventoryId string")
     void shouldFindByInventoryId() {
-        UUID targetId = UUID.randomUUID();
-        InventoryEntity inventory = InventoryEntity.builder()
+
+        var targetId = UUID.randomUUID();
+        var inventory = InventoryEntity.builder()
+
                 .inventoryId(targetId)
                 .tool(tool1)
                 .quantityInitial(10)
+                .quantityCurrent(5)
                 .build();
+
         entityManager.persist(inventory);
 
-        Optional<InventoryEntity> found = repository.findByInventoryId(targetId);
+        var found = repository
+                .findByInventoryId(targetId);
 
         assertTrue(found.isPresent());
         assertEquals(targetId, found.get().getInventoryId());
